--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,36 @@
 version: "3"
 
 services:
-  gmn_data_dashboard:
-    build: ./gmn_data_dashboard
+  gmn_data_portal:
+    image: datasetteproject/datasette:0.61.1
+    restart: always
+    ports:
+      - "8001:8001"
     volumes:
-      - ./gmn_data_dashboard/app:/app
-    depends_on:
-      - gmn_rest_api
+      - gmn_data_store:/mnt
+      - ./services/gmn_data_portal:/app
+    command: >
+      bash -c "
+      pip install /app/datasette-meteor-map &&
+      pip install -r /app/requirements.txt &&
+      datasette -p 8001 -h 0.0.0.0 /mnt/gmn_data_store.db -m /app/metadata.yml --template-dir=/app/templates/ --static assets:/app/static/ --plugins-dir=/app/plugins/"
+
+    networks:
+      - gmn_data_platform_network
+
+
+  gmn_live_meteor_map:
+    build: services/gmn_live_meteor_map
+    volumes:
+      - ./services/gmn_live_meteor_map:/app
     ports:
       - 8050:8050
     networks:
       - gmn_data_platform_network
 
-  gmn_rest_api:
-    build : ./gmn_rest_api
-    volumes:
-      - ./gmn_rest_api/app:/app
-    env_file:
-      - gmn_rest_api/.env
-    ports:
-      - 80:80
-    networks:
-      - gmn_data_platform_network
+volumes:
+  gmn_data_store:
+    external: true
 
 networks:
   gmn_data_platform_network:
