--- a/services/gmn_live_meteor_map/Dockerfile
+++ b/services/gmn_live_meteor_map/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.9
 
 ENV DASH_DEBUG_MODE True
-COPY app /app
+COPY . /app
 WORKDIR /app
 RUN set -ex && \
     pip install -r requirements.txt
 EXPOSE 8050
-CMD ["python", "app.py"]
+CMD ["python", "main.py"]
